--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
             }
         }
 
+        // Save to Local Storage
         function storeCities(){
-            // save to local storage
             localStorage.setItem("city", JSON.stringify(cities));
         }
 
